@startuml
annotation java.lang.Override
class it.unisa.java_music_playlist_manager.model.Library
class it.unisa.java_music_playlist_manager.model.PausedState
class it.unisa.java_music_playlist_manager.model.PlaybackManager
class it.unisa.java_music_playlist_manager.model.PlayingState
class it.unisa.java_music_playlist_manager.model.Playlist
class it.unisa.java_music_playlist_manager.model.RepeatStrategy
class it.unisa.java_music_playlist_manager.model.SequentialStrategy
class it.unisa.java_music_playlist_manager.model.StoppedState
class it.unisa.java_music_playlist_manager.model.TagCustomizable
class it.unisa.java_music_playlist_manager.model.Track
class java.io.File
class java.time.LocalDate
class java.util.ArrayList
class java.util.Collections
class java.util.LinkedHashSet
class java.util.List
class java.util.Objects
class java.util.Set
class java.util.UUID
class javafx.scene.media.Media
class javafx.scene.media.MediaPlayer
enum it.unisa.java_music_playlist_manager.model.TagPredefined
interface it.unisa.java_music_playlist_manager.model.Observer
interface it.unisa.java_music_playlist_manager.model.Playable
interface it.unisa.java_music_playlist_manager.model.PlaybackState
interface it.unisa.java_music_playlist_manager.model.PlaybackStrategy
interface it.unisa.java_music_playlist_manager.model.Subject
interface it.unisa.java_music_playlist_manager.model.Tag
it.unisa.java_music_playlist_manager.model.Library ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.Library ..> java.util.ArrayList
it.unisa.java_music_playlist_manager.model.Library ..> java.util.List
it.unisa.java_music_playlist_manager.model.Library --|> it.unisa.java_music_playlist_manager.model.Subject
it.unisa.java_music_playlist_manager.model.PausedState ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.PausedState --|> it.unisa.java_music_playlist_manager.model.PlaybackState
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> java.io.File
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> java.util.ArrayList
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> java.util.List
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> javafx.scene.media.Media
it.unisa.java_music_playlist_manager.model.PlaybackManager ..> javafx.scene.media.MediaPlayer
it.unisa.java_music_playlist_manager.model.PlaybackManager --|> it.unisa.java_music_playlist_manager.model.Subject
it.unisa.java_music_playlist_manager.model.PlayingState ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.PlayingState --|> it.unisa.java_music_playlist_manager.model.PlaybackState
it.unisa.java_music_playlist_manager.model.Playlist ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.Playlist ..> java.util.ArrayList
it.unisa.java_music_playlist_manager.model.Playlist ..> java.util.List
it.unisa.java_music_playlist_manager.model.Playlist ..> java.util.Objects
it.unisa.java_music_playlist_manager.model.Playlist ..> java.util.UUID
it.unisa.java_music_playlist_manager.model.Playlist --|> it.unisa.java_music_playlist_manager.model.Playable
it.unisa.java_music_playlist_manager.model.RepeatStrategy ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.RepeatStrategy --|> it.unisa.java_music_playlist_manager.model.PlaybackStrategy
it.unisa.java_music_playlist_manager.model.SequentialStrategy ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.SequentialStrategy --|> it.unisa.java_music_playlist_manager.model.PlaybackStrategy
it.unisa.java_music_playlist_manager.model.StoppedState ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.StoppedState --|> it.unisa.java_music_playlist_manager.model.PlaybackState
it.unisa.java_music_playlist_manager.model.TagCustomizable ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.TagCustomizable --|> it.unisa.java_music_playlist_manager.model.Tag
it.unisa.java_music_playlist_manager.model.Track ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.Track ..> java.time.LocalDate
it.unisa.java_music_playlist_manager.model.Track ..> java.util.ArrayList
it.unisa.java_music_playlist_manager.model.Track ..> java.util.Collections
it.unisa.java_music_playlist_manager.model.Track ..> java.util.LinkedHashSet
it.unisa.java_music_playlist_manager.model.Track ..> java.util.List
it.unisa.java_music_playlist_manager.model.Track ..> java.util.Objects
it.unisa.java_music_playlist_manager.model.Track ..> java.util.Set
it.unisa.java_music_playlist_manager.model.Track ..> java.util.UUID
it.unisa.java_music_playlist_manager.model.Track --|> it.unisa.java_music_playlist_manager.model.Playable
it.unisa.java_music_playlist_manager.model.Track --|> it.unisa.java_music_playlist_manager.model.Subject
it.unisa.java_music_playlist_manager.model.TagPredefined ..> java.lang.Override
it.unisa.java_music_playlist_manager.model.TagPredefined --|> it.unisa.java_music_playlist_manager.model.Tag
it.unisa.java_music_playlist_manager.model.Playable ..> java.util.List
@enduml